--- a/package.json
+++ b/package.json
@@ -22,11 +22,16 @@
   },
   "homepage": "https://github.com/InPen/pandemicHobbies#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "mongodb": "^3.6.5",
-    "nodemon": "^2.0.7"
+    "mongoose": "^5.12.3",
+    "nodemon": "^2.0.7",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
